# LiBurn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  code_generator.py
LiBurn/: CMakeLists.txt  main.cpp  shellcode.hpp
Payload/: CMakeLists.txt  main.cpp
